tests/ui/parser/close_delimeter.stderr
error: expected `;`, found `)`
  --> ROOT/tests/ui/parser/close_delimeter.sol:LL:CC
   |
LL |     uint y)
   |           ^ expected `;`

error: aborting due to 1 previous error

