tests/ui/parser/close_delimeter.sol
struct X {
    uint y) //~ ERROR: `;`, found `)`
}